# FileUnblocker

./: .gitignore  README.md
.github/workflows/: build-release.yml
assets/: unblocker_banner.pdn  unblocker_logo.pdn
rust/: Cargo.toml  build-windows.ps1  build.rs  unblocker.rc
rust/src/: config.rs  elevation.rs  error.rs  lib.rs  main.rs  path_utils.rs  ui.rs  unblocker.rs
wix/: Components.wxs  Product.wxs  Unblocker.wixproj  build-installer.ps1
