[package]
name = "unblocker"
version = "1.0.0"
edition = "2021"
description = "Windows file unblocker utility that removes Zone.Identifier alternate data streams"
authors = ["SaltSpectre"]
license = "MIT"

[[bin]]
name = "unblocker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security", 
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging"
] }

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
